<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ErregistroOrria">

    <!-- EditText for "Erab" -->
    <EditText
        android:id="@+id/txtErab"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtErab"
        android:inputType="text"
        android:textColor="#333333"
        android:background="@drawable/edittext_bg"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <!-- EditText for "PostaE" -->
    <EditText
        android:id="@+id/txtPostaE"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txtPostaE"
        android:inputType="textEmailAddress"
        android:textColor="#333333"
        android:background="@drawable/edittext_bg"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtErab"
        app:layout_constraintVertical_bias="0.0" />

    <!-- EditText for Password -->
    <EditText
        android:id="@+id/txtPass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lblPass"
        android:inputType="textPassword"
        android:textColor="#333333"
        android:background="@drawable/edittext_bg"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPostaE"
        app:layout_constraintVertical_bias="0.088" />

    <!-- Gender Radio Group -->
    <RadioGroup
        android:id="@+id/radioGroupGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintVertical_bias="0.177">
        <RadioButton
            android:id="@+id/btnGizona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/btnGizona"
            android:textColor="#555555"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/btnEmakumea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/btnEmakumea"
            android:textColor="#555555"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/btnBestea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBestea"
            android:textColor="#555555"
            android:textSize="16sp"/>
    </RadioGroup>

    <!-- Spinner for "Egoitza" -->
    <Spinner
        android:id="@+id/spnEgoitza"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGenero"
        app:layout_constraintVertical_bias="0.0" />

    <!-- CheckBox for "Adina" -->
    <CheckBox
        android:id="@+id/chkAdina"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:text="@string/chkAdina"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnEgoitza"
        app:layout_constraintVertical_bias="0.957" />

    <!-- Button for "Erregistroa" -->

    <Button
        android:id="@+id/btnErregistroa"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/btnErregistroa"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkAdina"
        app:layout_constraintVertical_bias="0.414" />

    <Button
        android:id="@+id/btnBueltatu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/btnBueltatu"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnErregistroa"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkAdina"
        app:layout_constraintVertical_bias="0.414" />

</androidx.constraintlayout.widget.ConstraintLayout>
